added docs for user info
